PR/54375: Andreas Gustafsson: gdb attached to running process shows extra thread. When attaching to a process that has threads make sure that we mutate the inferior_ptid (that currently has lwpid == 0 to the first thread we encounter.